Add new perm contexts